DB: fix overflowing image on y-axis in image#show

--- a/css/component.css
+++ b/css/component.css
@@ -26,7 +26,7 @@
   	margin: 0 auto;
   	display: block;
   	max-width: 100%;
-  	max-height: 100%;
+  	max-height: 90%;
   }
 
   img.video-thumbs {
